# StreamingSignalDecompositionRTDA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: demo.yaml
docs/: canonical_numbers.md  compute_environment.md  critical_steps_completion_report.md  important_steps_completion_report.md  latency_vs_throughput.md  memory_bound.md  metrics_temporal_scope.md  real_time_definition.md  references.md  related_work_bmsc2025.md
experiments/: __init__.py  benchmark_complexity.py  benchmark_optimized_grid.py  compare_engines.py  compare_matchers.py  eval_n_sinusoids.py  evaluate_bandwidth_methods.py  long_stream_test.py  plot_curvefit_vs_svd.py  plot_long_stream.py  plot_long_stream_hist.py  plot_max_components_grid.py  plot_nmse_threshold_comparison.py  plot_nmse_threshold_grid.py  plot_optimized_grid.py  plot_snr_sweep.py  profile_optimized.py  profile_pipeline.py  replot_pipeline_dashboard.py  run_experiment.py  run_window_inspection.py  sensitivity_max_components.py  sensitivity_nmse_threshold.py  sensitivity_sweep.py  snr_sweep_multiseed.py  snr_sweep_stats.py  synthetic.py
notebooks/: 01_framework_demo.ipynb  demo.ipynb
scripts/: inspect_windows.py  post_experiment_window_diagnostics.py  run_benchmark.py  run_demo.py  smoke_test.py
src/: __init__.py
streamssd/: __init__.py  embed.py  metrics.py  reconstruct.py  tracking.py  utils.py  window.py
tests/: __init__.py  conftest.py  test_bandwidth_estimation.py  test_embed.py  test_energy_continuity_norm.py  test_matching.py  test_metrics.py  test_metrics_integration.py  test_rsvd.py  (+11 more)
(+39 files in other folders)
